examples/errors/var_redeclaration.syntax
Program
  ProgramDeclaration
    ClassName: Main
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: Integer
                        Arguments
                          Expressions
                            Primary: 10
                      VariableName: a
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Real
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      CompoundExpression: Real
                        Arguments
                          Expressions
                            Primary: 10.000000
                      VariableName: a
